--- a/css/style.scss
+++ b/css/style.scss
@@ -15,22 +15,6 @@ sans-serif;
 
 $breekpunt: 850px;
 
-$col-1: 8,
-3333%;
-$col-2: 16,
-6666%;
-$col-3: 25%;
-$col-4: 33,
-3333%;
-$col-5: 41.6666%;
-$col-6: 50%;
-$col-7: 25%;
-$col-8: 66.66%;
-$col-9: 75%;
-$col-10: 83.33%;
-$col-11: 91.66%;
-$col-12: 100%;
-
 /*OPMAAK*/
 * {
     padding: 0;
@@ -52,6 +36,7 @@ body {
     h1 {
         line-height: 1em;
         font-size: 3.5rem;
+        font-weight: 700;
     }
 
     h2 {
@@ -89,21 +74,16 @@ body {
     /*TERUGKERENDE LAY_OUT*/
 
     .navbar {
-        /* Create a sticky/fixed navbar */
         overflow: hidden;
         background-color: #f1f1f1;
         padding: 50px 10px;
         /* Large padding which will shrink on scroll (using JS) */
         transition: 0.4s;
-        /* Adds a transition effect when the padding is decreased */
         position: fixed;
-        /* Sticky/fixed navbar */
         width: 100%;
         top: 0;
-        /* At the top */
         z-index: 99;
 
-        /* Style the navbar links */
         a {
             font-family: $fontset1;
             float: left;
@@ -202,7 +182,7 @@ body {
                 padding: 40px 0;
                 float: left;
                 display: block;
-                background-color: $color4;
+                background-color: $color2;
                 z-index: 10;
                 position: absolute;
                 position: fixed;
@@ -283,7 +263,7 @@ body {
                     text-transform: uppercase;
                     font-weight: 700;
                     font-size: 1em;
-                    background-color: $color3;
+                    background-color: $color2;
                     margin-top: 1em;
                     border-radius: 20px;
                     border: 0;
@@ -319,6 +299,7 @@ body {
 
     .footer {
         max-height: 100px;
+        margin: 0 auto;
         padding: 20px 10px 40px 10px;
         text-align: right;
         font-family: $fontset2;
@@ -337,7 +318,7 @@ body {
     }
 
     .img-left {
-        padding: 0;
+        padding: 20px;
         margin: 0 auto;
     }
 
@@ -346,7 +327,7 @@ body {
     }
 
     .img-right {
-        padding: 0;
+        padding: 20px;
         margin: 0 auto;
     }
 
@@ -393,6 +374,7 @@ body {
     .container {
         .row {
             margin-bottom: 20px;
+            position: relative;
 
             /*TIPS PAGE*/
             .tip-txt {
@@ -404,6 +386,7 @@ body {
 
                 h1 {
                     padding-left: 25%;
+                    color: $color2;
                 }
 
                 p {
@@ -486,6 +469,214 @@ body {
                 align-items: center;
                 }
             }
+
+            /*FORMS*/
+            .contact{
+                clear: right;
+                margin-bottom: 50px;
+                padding-right: 50%;
+
+                button{
+                    padding: 10px 25px;
+                    background-color: $color4;
+                    color: white;
+                    border: none;
+                    border-radius: 16px;
+
+                    font-family: $fontset1;
+                    font-weight: 600;
+                    text-align: center;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    font-size: 1rem;
+                }
+            }
+
+            .img-contact{
+                width: 50%;
+                height: auto;
+                padding: 20px;
+                position: absolute;
+                right: 0%;
+                img{
+                    width: 75%;
+                    float: right;
+                }
+            }
+
+            .info-crowdfunding{
+                .column {
+                    float: left;
+                    width: 50%;
+                    padding: 20px 20px 20px 0;
+                    margin-bottom: 20px;
+
+                    .plan {
+                        min-height: 550px;
+                        list-style-type: none;
+                        text-align: center;
+                        border: 4px solid $color4;
+                        color: $color4;
+                        border-radius: 24px;
+                        margin: 0;
+                        padding: 20px;
+                        -webkit-transition: 0.3s;
+                        transition: 0.3s;
+
+                        position: relative;
+
+                        li {
+                            padding: 10px;
+
+                            h3{
+                                font-weight: 900;
+                                color: $color2;
+                            }
+                            h4{
+                                padding-bottom: 20px;
+                                border-bottom: 2px solid $color4;  
+                            }      
+                          }
+
+                        .li-button{
+                            position: absolute;
+                            bottom: 20px;
+                            right: 25%;
+                            height:  50px;
+
+                            .button {
+                                padding: 10px 25px;
+                                background-color: $color4;
+                                border: none;
+                                border-radius: 16px;
+                                color: white;
+
+                                font-family: $fontset1;
+                                font-weight: 600;
+                                text-align: center;
+                                text-decoration: none;
+                                text-transform: uppercase;
+                                font-size: 1rem;
+                              }
+                            .button:hover{
+                                background-color: $color2;
+                                color: black;
+                            }
+                            
+                        }
+                    } 
+                    .plan:hover{
+                        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+                    }  
+                      
+                    @media only screen and (max-width: 600px) {
+                          width: 100%;
+                        }
+                  }
+
+                .crowdfunding-uitleg{
+                    padding: 50px;
+                }
+            }
+
+            .sidebar-crowdfunding{
+                background-color: $color4;
+                border-radius: 24px;
+                padding: 20px;
+                color: $color1;
+
+                margin-top: 150px;
+                position: relative;
+                text-align: center;
+
+                .crwdf-img{
+                    margin: 0 auto;
+                    position: absolute;
+                    top: -50px;
+
+                    img{
+                        width: 60%;
+                        height: auto;
+                    }
+                }
+
+                .crwdf-doel{
+                    margin-top: 280px;
+                    height: 280px;
+
+                    h3{
+                        text-align: left;
+                    }
+
+                    .progress{
+                        background-color: $color2;
+                    }
+
+                    #percentage{
+                        width: 50%;
+                        float: left;
+                        
+                        p{
+                            margin-top: 10px;
+                            text-align: left;
+                        }
+                    }
+
+                    #bedrag{
+                        width: 50%;
+                        float: right;
+
+                        p{
+                            margin-top: 10px;
+                        }
+                    }
+
+                    a{
+                        .doneerbttn{
+                            margin: 10px auto;
+                            padding: 10px 25px;
+                            background-color: $color1;
+                            color: $color2;
+                            border: none;
+                            border-radius: 16px;
+
+                            font-family: $fontset1;
+                            text-align: center;
+                            font-weight: 800;
+                            text-decoration: none;
+                            text-transform: uppercase;
+                            font-size: 1.25rem;
+                        }
+
+                        .doneerbttn:hover{
+                            background-color: $color2;
+                            color: $color4
+                        }
+                    }
+
+                    a:hover{
+                        background-color: $color2;
+                        color: black
+                    }
+                }
+
+                .crwdf-countdown{
+                    h3{
+                        text-transform: uppercase;
+                    }
+
+                    #countdown{
+                        color: $color2; 
+
+                        p{
+                            margin-top: 0;
+                            font-size: 2rem;
+                            border-top: 4px solid $color2;
+                            border-bottom: 4px solid $color2;
+                        }
+                    }
+                }
+            }
         }
 
         /*HULP CARDS PAGE*/
@@ -563,23 +754,31 @@ body {
 
         button{
             -webkit-appearance: none;
-            border-radius: 20px;
-            background-color: $color4;
-            padding: 10px 20px;
-            border-style: none;
             margin-top: 10px, 0, 30px,0;
+            padding: 10px 20px;
+
+            border-radius: 16px;
+            background-color: $color4;
+            border-style: none;
+
             font-size: 1rem;
-            color: white;
+            font-family: $fontset1;
+            font-weight: 700px;
 
             a{
-                background-color: $color4;
-                color: white;
                 text-decoration: none;
+                color: white;
             }
+        }
+
+        button:hover{
+            background-color: $color2;
+            color: black;
+
             a:hover{
-                background-color: $color2;
-                color: white;
+                color: black;
                 text-decoration: none;
+                font-weight: 700px;
             }
         }
     }
