--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   background-color: #fad454;
   /*TYPOGRAPHY*/
   /*TERUGKERENDE LAY_OUT*/
+  /*NAVIGATION BAR*/
   /*Tekstvakken van padding voorzien*/
   /*INFO PAGE*/
 }
@@ -34,8 +35,20 @@ body h2 {
   font-size: 3rem;
 }
 
+@media (max-width: 600px) {
+  body h2 {
+    font-size: 2rem;
+  }
+}
+
 body h3 {
   font-size: 2rem;
+}
+
+@media (max-width: 600px) {
+  body h3 {
+    font-size: 1.5rem;
+  }
 }
 
 body h4 {
@@ -113,6 +126,7 @@ body .navbar a.active {
 
 body .navbar .navbar-right {
   float: right;
+  margin-right: 20px;
 }
 
 @media (max-width: 850px) {
@@ -216,11 +230,11 @@ body .container-fluid .home-col-logo {
 
 body .container-fluid .home-col-logo .home-div-logo {
   top: 0;
-  z-index: 12;
+  z-index: 0;
   width: 100%;
   height: auto;
   margin: auto;
-  padding: 8% 8% 0 14%;
+  padding: 0 15%;
 }
 
 body .container-fluid .home-col-logo .home-div-logo img {
@@ -231,7 +245,7 @@ body .container-fluid .home-col-logo .home-div-logo img {
 
 body .container-fluid .home-col-logo .home-txt {
   width: 75%;
-  margin: 40px auto;
+  margin: 20px auto;
   padding: 20px;
 }
 
@@ -299,11 +313,24 @@ body .footer {
 
 body .eerste-rij {
   margin-top: 200px;
-  min-height: 400px;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  body .eerste-rij {
+    padding: 20px;
+  }
 }
 
 body .txt-left {
   padding: 20px 20px 20px 10%;
+}
+
+@media (max-width: 768px) {
+  body .txt-left {
+    padding: 0 60px;
+    margin: 0 auto;
+  }
 }
 
 body .img-left {
@@ -315,6 +342,13 @@ body .txt-right {
   padding: 20px 10% 20px 20px;
 }
 
+@media (max-width: 768px) {
+  body .txt-right {
+    padding: 0 60px;
+    margin: 0 auto;
+  }
+}
+
 body .img-right {
   padding: 20px;
   margin: 0 auto;
@@ -323,49 +357,145 @@ body .img-right {
 body .cnt-info {
   margin: 0 auto;
   height: auto;
-  padding: 0;
+  padding: 0px;
+  overflow: hidden;
 }
 
 body .cnt-info .eerste-rij {
   padding: 0;
 }
 
-body .cnt-info .eerste-rij .kleurvlak-rechts {
-  width: 50%;
-  height: 100%;
-  float: right;
+body .cnt-info .eerste-rij .col-kleurvlak {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .cnt-info .eerste-rij .col-kleurvlak .kleurvlak-rechts {
+  position: absolute;
+  right: 0px;
+  width: 75%;
+  height: 75%;
   background-color: #e96669;
 }
 
-body .cnt-info .eerste-rij .kleurvlak-rechts img {
+body .cnt-info .eerste-rij .col-kleurvlak .kleurvlak-rechts img {
+  position: absolute;
+  bottom: -80px;
+  right: 25%;
+  padding-right: 40px;
   width: 100%;
   height: auto;
-  float: left;
+  max-height: auto;
 }
 
-body .cnt-info .tweede-rij .kleurvlak-links {
+@media (max-width: 768px) {
+  body .cnt-info .eerste-rij .col-kleurvlak {
+    display: none;
+  }
+}
+
+body .cnt-info .eerste-rij .txt-left p {
+  margin-top: 0;
+}
+
+body .cnt-info .eerste-rij .txt-left p .info-img-mobile-right {
+  float: right;
   width: 50%;
-  height: 100%;
-  float: left;
+  padding: 20px;
+}
+
+@media (min-width: 768px) {
+  body .cnt-info .eerste-rij .txt-left p .info-img-mobile-right {
+    display: none;
+  }
+}
+
+body .cnt-info .tweede-rij {
+  margin: 40px auto;
+}
+
+body .cnt-info .tweede-rij .col-kleurvlak {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+body .cnt-info .tweede-rij .col-kleurvlak .kleurvlak-links {
+  position: absolute;
+  left: 0px;
+  width: 75%;
+  height: 75%;
   background-color: #e96669;
 }
 
-body .cnt-info .tweede-rij .kleurvlak-links img {
-  width: 100%;
+body .cnt-info .tweede-rij .col-kleurvlak .kleurvlak-links img {
+  position: absolute;
+  bottom: -80px;
+  left: 30%;
+  padding-right: 40px;
+  width: auto;
   height: auto;
+  max-height: 500px;
+}
+
+@media (max-width: 768px) {
+  body .cnt-info .tweede-rij .col-kleurvlak {
+    display: none;
+  }
+}
+
+body .cnt-info .tweede-rij .txt-right p {
+  margin-top: 0;
+}
+
+body .cnt-info .tweede-rij .txt-right p .info-img-mobile-left {
+  padding: 20px;
   float: right;
+  width: 50%;
+}
+
+@media (min-width: 768px) {
+  body .cnt-info .tweede-rij .txt-right p .info-img-mobile-left {
+    display: none;
+  }
 }
 
 body .container {
+  /*CROWDFUNDING*/
   /*HULP CARDS PAGE*/
 }
 
 body .container .row {
-  margin-bottom: 20px;
   position: relative;
   /*TIPS PAGE*/
   /*TIPS nummering*/
-  /*FORMS*/
+  /*TIPS image*/
+  /*HULPGROEP image en txt*/
+  /*CONTACT*/
 }
 
 body .container .row .tip-txt {
@@ -385,17 +515,61 @@ body .container .row .tip-txt p {
   padding-left: 25%;
 }
 
+body .container .row .tip-txt p .tip-img-mobile {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  body .container .row .tip-txt p .tip-img-mobile {
+    margin: 20px auto 0 auto;
+    display: block;
+    width: 50%;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  body .container .row .tip-txt {
+    width: 100%;
+    padding-right: 40px;
+    margin-bottom: 0;
+  }
+  body .container .row .tip-txt h1 {
+    font-size: 2.5rem;
+    padding-left: 20%;
+  }
+  body .container .row .tip-txt p {
+    padding-left: 20%;
+  }
+}
+
 body .container .row #tip1 h1::before {
   content: "1";
   position: absolute;
   top: 70px;
   left: 0;
+  top: 70px;
   color: #e96669;
   font-family: "Varela Round", sans-serif;
   font-weight: bold;
   font-size: 12rem;
   max-width: 25%;
   display: block;
+}
+
+@media (max-width: 600px) {
+  body .container .row #tip1 h1::before {
+    font-size: 6rem;
+    margin-left: 20px;
+    top: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  body .container .row #tip1 h1::before {
+    font-size: 8rem;
+    top: 50px;
+  }
 }
 
 body .container .row #tip2 h1::before {
@@ -411,6 +585,21 @@ body .container .row #tip2 h1::before {
   display: block;
 }
 
+@media (max-width: 600px) {
+  body .container .row #tip2 h1::before {
+    font-size: 6rem;
+    margin-left: 20px;
+    top: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  body .container .row #tip2 h1::before {
+    font-size: 8rem;
+    top: 50px;
+  }
+}
+
 body .container .row #tip3 h1::before {
   content: "3";
   position: absolute;
@@ -424,6 +613,21 @@ body .container .row #tip3 h1::before {
   display: block;
 }
 
+@media (max-width: 600px) {
+  body .container .row #tip3 h1::before {
+    font-size: 6rem;
+    margin-left: 20px;
+    top: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  body .container .row #tip3 h1::before {
+    font-size: 8rem;
+    top: 50px;
+  }
+}
+
 body .container .row #tip4 h1::before {
   content: "4";
   position: absolute;
@@ -435,6 +639,21 @@ body .container .row #tip4 h1::before {
   font-size: 12rem;
   max-width: 25%;
   display: block;
+}
+
+@media (max-width: 600px) {
+  body .container .row #tip4 h1::before {
+    font-size: 6rem;
+    margin-left: 20px;
+    top: 40px;
+  }
+}
+
+@media (max-width: 992px) {
+  body .container .row #tip4 h1::before {
+    font-size: 8rem;
+    top: 50px;
+  }
 }
 
 body .container .row .tip-img img {
@@ -457,10 +676,58 @@ body .container .row .tip-img img {
           align-items: center;
 }
 
+@media (max-width: 768px) {
+  body .container .row .tip-img {
+    display: none;
+  }
+}
+
+body .container .row .hulp-txt {
+  padding: 20px 40px;
+}
+
+body .container .row .hulp-txt h2 {
+  margin-top: 0;
+}
+
+body .container .row .hulp-txt .hulp-img-mobile {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  body .container .row .hulp-txt .hulp-img-mobile {
+    float: right;
+    display: block;
+    width: 40%;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 850px) {
+  body .container .row .hulp-txt {
+    padding: 20px;
+  }
+}
+
+body .container .row .hulp-img {
+  padding: 40px 40px;
+  margin: auto auto;
+}
+
+body .container .row .hulp-img img {
+  width: 80%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  body .container .row .hulp-img {
+    display: none;
+  }
+}
+
 body .container .row .contact {
   clear: right;
   margin-bottom: 50px;
-  padding-right: 50%;
 }
 
 body .container .row .contact button {
@@ -490,14 +757,25 @@ body .container .row .img-contact img {
   float: right;
 }
 
-body .container .row .info-crowdfunding .column {
+@media (max-width: 767.98px) {
+  body .container .row .img-contact img {
+    display: none;
+  }
+}
+
+@media (max-width: 767.98px) {
+  body .container .row .img-contact {
+    display: none;
+  }
+}
+
+body .container .row-crwdf .info-crowdfunding .column {
   float: left;
   width: 50%;
   padding: 20px 20px 20px 0;
-  margin-bottom: 20px;
 }
 
-body .container .row .info-crowdfunding .column .plan {
+body .container .row-crwdf .info-crowdfunding .column .plan {
   min-height: 550px;
   list-style-type: none;
   text-align: center;
@@ -511,28 +789,28 @@ body .container .row .info-crowdfunding .column .plan {
   position: relative;
 }
 
-body .container .row .info-crowdfunding .column .plan li {
+body .container .row-crwdf .info-crowdfunding .column .plan li {
   padding: 10px;
 }
 
-body .container .row .info-crowdfunding .column .plan li h3 {
+body .container .row-crwdf .info-crowdfunding .column .plan li h3 {
   font-weight: 900;
   color: #e96669;
 }
 
-body .container .row .info-crowdfunding .column .plan li h4 {
+body .container .row-crwdf .info-crowdfunding .column .plan li h4 {
   padding-bottom: 20px;
   border-bottom: 2px solid #553c55;
 }
 
-body .container .row .info-crowdfunding .column .plan .li-button {
+body .container .row-crwdf .info-crowdfunding .column .plan .li-button {
   position: absolute;
   bottom: 20px;
   right: 25%;
   height: 50px;
 }
 
-body .container .row .info-crowdfunding .column .plan .li-button .button {
+body .container .row-crwdf .info-crowdfunding .column .plan .li-button .button {
   padding: 10px 25px;
   background-color: #553c55;
   border: none;
@@ -546,80 +824,82 @@ body .container .row .info-crowdfunding .column .plan .li-button .button {
   font-size: 1rem;
 }
 
-body .container .row .info-crowdfunding .column .plan .li-button .button:hover {
+body .container .row-crwdf .info-crowdfunding .column .plan .li-button .button:hover {
   background-color: #e96669;
   color: black;
 }
 
-body .container .row .info-crowdfunding .column .plan:hover {
+body .container .row-crwdf .info-crowdfunding .column .plan:hover {
   -webkit-box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
 }
 
 @media only screen and (max-width: 600px) {
-  body .container .row .info-crowdfunding .column {
-    width: 100%;
+  body .container .row-crwdf .info-crowdfunding .column {
+    width: 80%;
+    margin: 0 50px;
   }
 }
 
-body .container .row .info-crowdfunding .crowdfunding-uitleg {
+body .container .row-crwdf .info-crowdfunding .crowdfunding-uitleg {
   padding: 50px;
 }
 
-body .container .row .sidebar-crowdfunding {
+body .container .row-crwdf .sidebar-crowdfunding {
   background-color: #553c55;
   border-radius: 24px;
   padding: 20px;
   color: #fad454;
   margin-top: 150px;
+  margin-bottom: 40px;
   position: relative;
   text-align: center;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-img {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-img {
   margin: 0 auto;
   position: absolute;
   top: -50px;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-img img {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-img img {
   width: 60%;
   height: auto;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel {
   margin-top: 280px;
   height: 280px;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel h3 {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel h3 {
   text-align: left;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel .progress {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel .progress {
   background-color: #e96669;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel #percentage {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel #percentage {
   width: 50%;
   float: left;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel #percentage p {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel #percentage p {
   margin-top: 10px;
   text-align: left;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel #bedrag {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel #bedrag {
   width: 50%;
   float: right;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel #bedrag p {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel #bedrag p {
   margin-top: 10px;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel a .doneerbttn {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel a .doneerbttn {
   margin: 10px auto;
   padding: 10px 25px;
   background-color: #fad454;
@@ -634,39 +914,60 @@ body .container .row .sidebar-crowdfunding .crwdf-doel a .doneerbttn {
   font-size: 1.25rem;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel a .doneerbttn:hover {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel a .doneerbttn:hover {
   background-color: #e96669;
   color: #553c55;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-doel a:hover {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel a:hover {
   background-color: #e96669;
   color: black;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-countdown h3 {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-countdown h3 {
   text-transform: uppercase;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-countdown #countdown {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-countdown #countdown {
   color: #e96669;
 }
 
-body .container .row .sidebar-crowdfunding .crwdf-countdown #countdown p {
+body .container .row-crwdf .sidebar-crowdfunding .crwdf-countdown #countdown p {
   margin-top: 0;
   font-size: 2rem;
   border-top: 4px solid #e96669;
   border-bottom: 4px solid #e96669;
 }
 
+@media only screen and (max-width: 600px) {
+  body .container .row-crwdf .sidebar-crowdfunding {
+    margin: 20px;
+  }
+  body .container .row-crwdf .sidebar-crowdfunding .crwdf-doel {
+    height: 230px;
+  }
+}
+
+@media (max-width: 600px) {
+  body .container .row-crwdf {
+    padding: 20px;
+  }
+  body .container .row-crwdf h2 {
+    font-size: 2rem;
+  }
+  body .container .row-crwdf h3 {
+    font-size: 1.5rem;
+  }
+}
+
 body .container .row-card .cardblock {
   color: white;
   margin-top: 200px;
   width: 50%;
-  height: auto;
+  height: 200px;
   margin: auto;
   text-align: center;
-  padding: 20px;
+  padding: 10px 20px;
 }
 
 body .container .row-card .cardblock a {
@@ -676,7 +977,7 @@ body .container .row-card .cardblock a {
 
 body .container .row-card .cardblock a:hover {
   text-decoration: none;
-  color: #e96669;
+  color: black;
 }
 
 body .container .row-card .cardblock .bol {
@@ -715,14 +1016,72 @@ body .container .row-card .cardblock .textblock {
   border-style: hidden;
   width: 60%;
   margin: auto;
-  padding: 20px;
+  padding: 15px 20px;
   margin-top: -25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .container .row-card .cardblock .textblock:hover {
+  background-color: #e96669;
+  color: black;
+}
+
+@media (max-width: 992px) {
+  body .container .row-card .cardblock .textblock {
+    width: 100%;
+    height: 80px;
+  }
+}
+
+@media (max-width: 600px) {
+  body .container .row-card .cardblock .bol .icon {
+    font-size: 2.5rem;
+    width: 80px;
+    height: 80px;
+  }
+  body .container .row-card .cardblock .textblock {
+    width: 100%;
+    height: 60px;
+  }
+  body .container .row-card .cardblock .textblock h4 {
+    font-size: 1.2rem;
+  }
 }
 
 /*CALENDER*/
 .calender-row {
   padding: 20px;
   min-height: 200px;
+  position: relative;
+}
+
+.calender-row .calender-img {
+  width: 100%;
+  position: absolute;
+  left: 20;
+  position: fixed;
+  z-index: 20;
+  margin: 0 auto;
+}
+
+.calender-row .calender-img img {
+  width: 15%;
+  height: auto;
+}
+
+@media (max-width: 767.98px) {
+  .calender-row .calender-img img {
+    display: none;
+  }
 }
 
 .calender-row .date {
@@ -730,6 +1089,24 @@ body .container .row-card .cardblock .textblock {
   color: #e96669;
   margin-bottom: 40px;
   padding: 10px 30px;
+}
+
+@media (max-width: 767.98px) {
+  .calender-row .date {
+    margin: 0px auto;
+    width: 25%;
+    padding: 10px;
+    border: 4px solid #e96669;
+    border-radius: 24px;
+    text-align: center;
+  }
+  .calender-row .date h5 {
+    font-size: 3rem;
+    font-weight: 900;
+  }
+  .calender-row .date h6 {
+    font-size: 2rem;
+  }
 }
 
 .calender-row .event {
